[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrouw"
version = "0.1.1"
description = "Python BLE library for Grouw robotic mowers using the Daye Power protocol"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jesper B" }]
keywords = ["bluetooth", "ble", "grouw", "mower", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21.1",
    "bleak-retry-connector>=3.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Bjorkan/pyGrouw"
Issues = "https://github.com/Bjorkan/pyGrouw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pygrouw = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
